feat: allow html to pdf compiling using chromium
